* Fixed bug in FFT filter
* Fixed bug in statistics and normalization for 16b images
* Added weighted mean stacking based on bgnoise
* Changed handling of zero values in statistics, global registration, normalization and stacking
* Added independent normalization of each channel for color images
* Added faster location and scale estimators to replace IKSS with similar accuracy

siril 0.99.8.1 (1.0.0~beta4)
02/13/21

* Fixed crash because of wcslib function

siril 0.99.8 (1.0.0~beta3)
02/10/21

* New ability to remove sequence frames from the "Plot" tab
* New merge command
* New astrometry annotation ability
* New snapshot function
* New conversion internal algorithm, can convert any sequence to any other sequence type too now
* Handle datetime in TIFF file
* Improved color saturation tool with a background factor to adjust the strength
* Reduced memory used by global registration
* Improving films (AVI and others) support: notifying the user, suggesting conversion, fixing parallel operations
* Fixed memory leak in minmax algorithms
* Fixed a bug in FITS from DSLR debayer when image height is odd
* Fixed out-of-memory conditions on global registration and median or mean stacking
* Fixed SER stacking with 32 bits output
* Fixed bitrate value issue in mp4 export
* Fixed normalization issue with SER files

siril 0.99.6 (1.0.0~beta2)
09/23/20

* Selection can be moved and freely modified, its size is displayed in UI (Sébastien Rombauts)
* Undo/Redo buttons now display the operations they act upon (Sébastien Rombauts)
* Added color profile in TIFF and PNG files
* Image display refactoring (Guillaume Roguez)
* Fixed a bug in demosaicing orientation
* Fixed a bug in macOS package where Siril was not multithreated
* Fixed memory leak in pixel max/min stacking
* Fixed crash when selecting 1 pixel
* Better integration in low resolution screen
* Added embed ICC profile in png and TIFF files
* By default Siril now checks update at startup