@@ -13137,7 +13137,8 @@ The dark master image will be removed from all images in the sequence.</property
                                     <property name="visible">True</property>
                                     <property name="can-focus">True</property>
                                     <property name="tooltip-text" translatable="yes">Enter the master bias/offset file name here, or use the browse button.
-The bias/offset master image will be removed from all images in the sequence.</property>
+The bias/offset master image will be removed from all images in the sequence.
+Instead of an image, you can also specify a uniform level to be substracted, starting with an "=" sign, such as =256 or =64*$OFFSET</property>
                                     <property name="width-chars">40</property>
                                     <property name="text">master-bias.fit</property>
                                   </object>
