@@ -14,6 +14,7 @@ vxxxxx
 * Changed handling of zero values in statistics, global registration, normalization and stacking
 * Added independent normalization of each channel for color images
 * Added faster location and scale estimators to replace IKSS with similar accuracy
+* Added specifying a level for biases
 
 v0.99.8.1 February 13, 2021
 Patch version to fix a crash
