@@ -14,6 +14,7 @@ siril xxxxxxx
 * Changed handling of zero values in statistics, global registration, normalization and stacking
 * Added independent normalization of each channel for color images
 * Added faster location and scale estimators to replace IKSS with similar accuracy
+* Added specifying a level for biases
 
 siril 0.99.8.1 (1.0.0~beta4)
 02/13/21
